styling layout bugs

--- a/project-base/web/assets/admin/styles/bootstrap/navbar.less
+++ b/project-base/web/assets/admin/styles/bootstrap/navbar.less
@@ -180,8 +180,8 @@
   font-size: @font-size-large;
   line-height: @line-height-computed;
   height: @navbar-height;
-  width: 245px;
-  .background('logo.png', 0 10px);
+  width: 225px;
+  .background('logo.png', 0 5px);
   text-indent: -9999px;
 
   &:hover,
