--- a/project-base/web/assets/admin/styles/bootstrap/navs.less
+++ b/project-base/web/assets/admin/styles/bootstrap/navs.less
@@ -119,19 +119,21 @@
       border-top: 0;
   }
   li {
-     a {
+     a, span {
       color: #888;
       border-top: 1px solid lighten(@gray-lighter, 5%);
       display: block;
       padding: @nav-link-padding;
       text-decoration: none;
-      
-      &:hover {
-        color: @gray-darker;
-        background: #fff;
-      }
-     
     }
+    span {
+      background: @state-info-bg;
+    }
+    a:hover {
+      color: @gray-darker;
+      background: #fff;
+    }
+     
     ul {
       .reset-ul();
       width: 100%;
