--- a/project-base/web/assets/admin/styles/variables/variables-bootstrap.less
+++ b/project-base/web/assets/admin/styles/variables/variables-bootstrap.less
@@ -61,6 +61,7 @@
 @line-height-base:        1.428571429; // 20/14
 //** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
 @line-height-computed:    floor((@font-size-base * @line-height-base)); // ~20px
+@margin-gap:              @line-height-computed;
 
 //** By default, this inherits from the `<body>`.
 @headings-font-family:    inherit;
@@ -327,7 +328,7 @@
 //##
 
 // Basics of a navbar
-@navbar-height:                    80px;
+@navbar-height:                    60px;
 @navbar-margin-bottom:             @line-height-computed;
 @navbar-border-radius:             @border-radius-base;
 @navbar-padding-horizontal:        floor((@grid-gutter-width / 2));
@@ -746,7 +747,7 @@
 //
 //##
 
-@breadcrumb-padding-vertical:   12px;
+@breadcrumb-padding-vertical:   6px;
 @breadcrumb-padding-horizontal: 15px;
 //** Breadcrumb background color
 @breadcrumb-bg:                 #fff;
